; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_store_name.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_store_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"store name %s <- %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_store_name(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @qstr_str(i32 %5)
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @DEBUG_OP_printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %7)
  %9 = call i32 (...) @mp_locals_get()
  %10 = call i32 @MP_OBJ_FROM_PTR(i32 %9)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @MP_OBJ_NEW_QSTR(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @mp_obj_dict_store(i32 %10, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @DEBUG_OP_printf(i8*, i32, i32) #1

declare dso_local i32 @qstr_str(i32) #1

declare dso_local i32 @mp_obj_dict_store(i32, i32, i32) #1

declare dso_local i32 @MP_OBJ_FROM_PTR(i32) #1

declare dso_local i32 @mp_locals_get(...) #1

declare dso_local i32 @MP_OBJ_NEW_QSTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
